# praesidio

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.observability.yml  docker-compose.oidc.yml  docker-compose.yml
.github/: dependabot.yml  (+1 more)
services/edge-proxy/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/edge-proxy/praesidio_edge_proxy/: __init__.py  ca.py  cli.py  config.py  extractors.py  proxy.py  scan_client.py  status.py
services/edge-proxy/praesidio_edge_proxy/install/: __init__.py  linux.sh  macos.sh  windows.ps1
services/edge-proxy/section_edge_proxy/: __init__.py  ca.py  cli.py  config.py  extractors.py  proxy.py  scan_client.py  status.py  upstream.py
services/edge-proxy/section_edge_proxy/install/: __init__.py  linux.sh  macos.sh  windows.ps1
services/edge-proxy/tests/: conftest.py  test_ca.py  test_cli.py  test_extractors.py  test_proxy_intercept.py
services/gateway/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
services/gateway/alembic/: README.md  env.py
services/gateway/alembic/versions/: 0001_initial_schema.py  0002_audit_request_id_index.py
services/gateway/migrations/: 0001_init.sql  200-vector-acl.sql
services/gateway/praesidio_gateway/: __init__.py  auth.py  config.py  main.py  state.py
services/gateway/praesidio_gateway/anonymize/: _ff3.py  fpe.py  vault.py
services/gateway/praesidio_gateway/api/: orchestrator.py
services/gateway/praesidio_gateway/api/admin/: detokenise.py  labels.py  policies.py
services/gateway/praesidio_gateway/api/anthropic_v1/: messages.py
services/gateway/praesidio_gateway/api/azure/: chat.py
services/gateway/praesidio_gateway/api/ollama_v1/: chat.py
services/gateway/praesidio_gateway/api/v1/: __init__.py  chat.py  completions.py  embeddings.py  models.py  scan.py
services/gateway/praesidio_gateway/audit/: chain.py
services/gateway/praesidio_gateway/audit/sinks/: splunk_hec.py  webhook.py
services/gateway/praesidio_gateway/cli/: __init__.py  audit_verify.py  policy_cli.py
services/gateway/praesidio_gateway/dlp/: pipeline.py
services/gateway/praesidio_gateway/dlp/detectors/: llm_classifier.py  presidio.py  secrets.py
services/gateway/praesidio_gateway/lineage/: tracker.py
services/gateway/praesidio_gateway/middleware/: rate_limit.py
services/gateway/praesidio_gateway/obs/: logging.py  metering.py  metrics.py  prices.py  tracing.py
services/gateway/praesidio_gateway/policy/: __init__.py  loader.py  tool_calls.py
services/gateway/praesidio_gateway/proxy/: azure.py  bedrock.py  registry.py
services/gateway/praesidio_gateway/vectors/: __init__.py  base.py  pgvector.py
services/gateway/section_gateway/: __init__.py  auth.py  config.py  main.py  state.py
services/gateway/section_gateway/anonymize/: __init__.py  _ff3.py  fpe.py  redactor.py  stream.py  tokenizer.py  vault.py
services/gateway/section_gateway/api/: orchestrator.py  vectors.py
services/gateway/section_gateway/audit/: __init__.py  chain.py  models.py  writer.py
services/gateway/section_gateway/cli/: __init__.py  audit_verify.py  policy_cli.py
services/gateway/section_gateway/dlp/: __init__.py  display.py  pipeline.py  types.py
services/gateway/section_gateway/lineage/: __init__.py
services/gateway/section_gateway/middleware/: __init__.py  rate_limit.py
services/gateway/section_gateway/obs/: __init__.py  logging.py  metering.py  metrics.py  prices.py  tracing.py
services/gateway/section_gateway/policy/: dsl.py  engine.py  loader.py  models.py  tool_calls.py
services/gateway/section_gateway/proxy/: anthropic.py  base.py  bedrock.py  ollama.py  openai.py
services/gateway/section_gateway/vectors/: __init__.py  base.py  pgvector.py  qdrant.py
services/gateway/tests/: conftest.py  test_admin_events_shape.py  test_admin_labels.py  test_alembic.py  test_anonymizer.py  test_anthropic_stream_restoration.py  test_audit_chain.py  test_audit_verify_cli.py  test_audit_writer_logging.py  test_auth_fingerprint.py  test_bedrock_adapter.py  test_block_response_headers.py  test_cel.py  test_detector_circuit_breaker.py  test_detectors_regex.py  test_detectors_secrets.py  test_detokenise_hardened.py  test_e2e_anthropic.py  test_e2e_proxy.py  test_e2e_real_llm.py  test_e2e_tool_calls.py  test_fpe_ff3.py  test_iban_separators.py  test_llm_classifier.py  test_metering_prices.py  test_policy_cli.py  test_policy_engine.py  test_policy_reload_race.py  test_rate_limit_per_key.py  test_rate_limit_tpm.py  test_rls_postgres.py  test_shadow_mode.py  test_siem_webhook.py  test_streaming_chunk_boundary.py  test_streaming_restore.py  test_tool_allowlist.py  test_v1_scan.py  test_vectors_pgvector.py  test_vectors_qdrant.py
services/gateway/tests/cassettes/: anthropic-messages-block.json  anthropic-messages-pii.json  openai-chat-block.json  openai-chat-pii.json
services/gateway/tests/fuzz/: README.md  __init__.py  conftest.py  fuzz_regex_detectors.py
(+556 files in other folders)
