[project]
name = "section-edge-proxy"
version = "1.0.0"
description = "Section Edge Proxy — local CA MITM that routes LLM-API traffic through the Section gateway for scan + mask + restore."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Section Contributors" }]
readme = "README.md"
dependencies = [
  "mitmproxy>=11.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "cryptography>=42.0.0",
  "structlog>=24.1.0",
  "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
section-edge-proxy = "section_edge_proxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["section_edge_proxy"]

[tool.hatch.build.targets.wheel.shared-data]
"section_edge_proxy/install" = "share/section_edge_proxy/install"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = [
  "S101",   # asserts ok in tests
  "S104",   # 0.0.0.0 bind is intentional in container
  "B008",   # FastAPI Depends() at default (kept for parity with gateway rules)
  "E501",   # ruff format handles wrapping
  "S110",   # silent except is deliberate at gateway edges (fail-soft)
  "S112",   # ditto for skip-on-error
  "SIM102", # explicit nested ifs read better in policy filters
  "SIM105", # contextlib.suppress is fine; not strictly an improvement
  "SIM108", # if/else over ternary keeps types obvious
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "ASYNC", "SIM117"]
"section_edge_proxy/install/**" = ["S"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
