[project]
name = "section-gateway"
version = "0.1.0"
description = "Section AI Security Gateway — semantic DLP, anonymisation, policy, audit."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Section Contributors" }]
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  # psycopg v3 is used only by Alembic for synchronous migrations; the
  # runtime gateway uses asyncpg. Without this, the entrypoint loop fails
  # with ModuleNotFoundError: No module named 'psycopg'.
  "psycopg[binary]>=3.2.0",
  "redis[hiredis]>=5.0.7",
  "pyyaml>=6.0.1",
  "cel-python>=0.1.5",
  "cryptography>=42.0.0",
  "structlog>=24.1.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "presidio-analyzer>=2.2.354",
  "spacy>=3.7.0",
  "detect-secrets>=1.5.0",
  "ulid-py>=1.1.0",
  "jsonschema>=4.22.0",
  "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "fakeredis>=2.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML",
]
fuzz = [
  "atheris>=2.3.0",
]

[project.scripts]
section-gateway = "section_gateway.main:run"
section-audit = "section_gateway.cli.audit_verify:main"
section-policy = "section_gateway.cli.policy_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["section_gateway"]

[tool.hatch.build.targets.wheel.shared-data]
"alembic" = "share/section_gateway/alembic"
"alembic.ini" = "share/section_gateway/alembic.ini"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = [
  "S101",   # asserts ok in tests
  "S104",   # 0.0.0.0 bind is intentional in container
  "B008",   # FastAPI Depends() at default
  "E501",   # ruff format handles wrapping
  "S110",   # silent except is deliberate at gateway edges (fail-soft)
  "S112",   # ditto for skip-on-error
  "SIM102", # explicit nested ifs read better in policy filters
  "SIM105", # contextlib.suppress is fine; not strictly an improvement
  "SIM108", # if/else over ternary keeps types obvious
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B", "ASYNC", "SIM117"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]
markers = [
  "postgres: requires a real PostgreSQL instance reachable via DATABASE_URL",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
